# sem-6-tech

./: .gitignore  test_ci
.github/: github-actions-demo.yml
.github/workflows/: github-actions-demo.yml
Behaviour trees /ping pong/: BT ping pong.drawio  index.py  isCountHigher.py  justification.docx  justification_old.docx  ping.py  pong.py
Behaviour trees /traffic_control/: justification.docx  traffic_control.docx
Behaviour trees /traffic_control/src/traffic_control_pkg/: CMakeLists.txt  package.xml
Behaviour trees /traffic_control/src/traffic_control_pkg/src/: conditions.cpp  conditions.h  main.cpp  nodes.cpp  nodes.h  traffic_control_ontwerp.xml  traffic_control_ontwerp2.xml
drivers/basic_driver/: Makefile  barebones_driver.c
drivers/kernel-gpio/: Makefile  kernel-gpio.c
drivers/procfs/: Makefile  procfs.c
open-rmf/OIL_rmf/: oil_map.building.yaml
open-rmf/POC/: .rmf_schedule_node.yaml
open-rmf/rmf-workspace/src/turtlebot_description/: package.xml
